Creacion de FacturaInterna y toadas sus depedencias